[project]
name = "mcpcentralbackend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi-limiter>=0.1.6",
    "fastapi[standard]>=0.115.12",
    "google-auth-oauthlib>=1.2.2",
    "passlib>=1.7.4",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.3",
    "python-jose[cryptography]>=3.4.0",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.40",
    "uvicorn[standard]>=0.34.2",
]
